--- a/blog-detay.html
+++ b/blog-detay.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-    <title>Aqua</title>
+    <title>Real Web Tasarım</title>
 
 
     <!-- Vendor  Css files -->
@@ -68,7 +68,7 @@
                 <input type="text" placeholder="ARA">
             </div>
             <i class="bi bi-list navbar-toggle d-block d-lg-none order-2 "></i>
-            <a class="btn-teklif d-none d-xl-block order-5" href="index.html#teklif">Teklif Al</a>
+            <a class="btn-teklif d-none d-xl-block order-5" href="index.html#teklif">TEKLİF AL</a>
 
     </header>
     <!-- Header Side END -->
@@ -127,7 +127,7 @@
                                     <img class="img-fluid" src="assets/img/blog/img-1.png">
                                 </div>
                                 <div class="card-body">
-                                    <h4>en sık kullanılan arayüz motifleri nelerdir?</h4>
+                                    <h4>EN SIK KULLANILAN ARAYÜZ MOTİFLERİ NELERDİR?</h4>
                                     <div class="card-body-detail">
                                         <span class="date">
                                             <i class="fa-regular fa-calendar-minus"></i>
@@ -145,7 +145,7 @@
                                     <img class="img-fluid" src="assets/img/blog/img-2.png">
                                 </div>
                                 <div class="card-body">
-                                    <h4>en sık kullanılan arayüz motifleri nelerdir?</h4>
+                                    <h4>EN SIK KULLANILAN ARAYÜZ MOTİFLERİ NELERDİR?</h4>
                                     <div class="card-body-detail">
                                         <span class="date">
                                             <i class="fa-regular fa-calendar-minus"></i>
@@ -163,7 +163,7 @@
                                     <img class="img-fluid" src="assets/img/blog/img-2.png">
                                 </div>
                                 <div class="card-body">
-                                    <h4>en sık kullanılan arayüz motifleri nelerdir?</h4>
+                                    <h4>EN SIK KULLANILAN ARAYÜZ MOTİFLERİ NELERDİR?</h4>
                                     <div class="card-body-detail">
                                         <span class="date">
                                             <i class="fa-regular fa-calendar-minus"></i>
