--- a/blog.html
+++ b/blog.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-    <title>Aqua</title>
+    <title>Real Web Tasarım</title>
 
 
     <!-- Vendor  Css files -->
@@ -68,7 +68,7 @@
                 <input type="text" placeholder="ARA">
             </div>
             <i class="bi bi-list navbar-toggle d-block d-lg-none order-2 "></i>
-            <a class="btn-teklif d-none d-xl-block order-5" href="index.html#teklif">Teklif Al</a>
+            <a class="btn-teklif d-none d-xl-block order-5" href="index.html#teklif">TEKLİF AL</a>
 
     </header>
     <!-- Header Side END -->
@@ -149,7 +149,7 @@
                             <img class="img-fluid" src="assets/img/blog/img-1.png">
                         </div>
                         <div class="card-body">
-                            <h4>en sık kullanılan arayüz motifleri nelerdir?</h4>
+                            <h4>EN SIK KULLANILAN ARAYÜZ MOTİFLERİ NELERDİR?</h4>
                             <div class="card-body-detail">
                                 <span class="date">
                                     <i class="fa-regular fa-calendar-minus"></i>
@@ -166,7 +166,7 @@
                             <img class="img-fluid" src="assets/img/blog/img-2.png">
                         </div>
                         <div class="card-body">
-                            <h4>en sık kullanılan arayüz motifleri nelerdir?</h4>
+                            <h4>EN SIK KULLANILAN ARAYÜZ MOTİFLERİ NELERDİR?</h4>
                             <div class="card-body-detail">
                                 <span class="date">
                                     <i class="fa-regular fa-calendar-minus"></i>
@@ -183,7 +183,7 @@
                             <img class="img-fluid" src="assets/img/blog/img-3.png">
                         </div>
                         <div class="card-body">
-                            <h4>en sık kullanılan arayüz motifleri nelerdir?</h4>
+                            <h4>EN SIK KULLANILAN ARAYÜZ MOTİFLERİ NELERDİR?</h4>
                             <div class="card-body-detail">
                                 <span class="date">
                                     <i class="fa-regular fa-calendar-minus"></i>
@@ -203,7 +203,7 @@
                             <img class="img-fluid" src="assets/img/blog/img-1.png">
                         </div>
                         <div class="card-body">
-                            <h4>en sık kullanılan arayüz motifleri nelerdir?</h4>
+                            <h4>EN SIK KULLANILAN ARAYÜZ MOTİFLERİ NELERDİR?</h4>
                             <div class="card-body-detail">
                                 <span class="date">
                                     <i class="fa-regular fa-calendar-minus"></i>
@@ -220,7 +220,7 @@
                             <img class="img-fluid" src="assets/img/blog/img-2.png">
                         </div>
                         <div class="card-body">
-                            <h4>en sık kullanılan arayüz motifleri nelerdir?</h4>
+                            <h4>EN SIK KULLANILAN ARAYÜZ MOTİFLERİ NELERDİR?</h4>
                             <div class="card-body-detail">
                                 <span class="date">
                                     <i class="fa-regular fa-calendar-minus"></i>
@@ -237,7 +237,7 @@
                             <img class="img-fluid" src="assets/img/blog/img-3.png">
                         </div>
                         <div class="card-body">
-                            <h4>en sık kullanılan arayüz motifleri nelerdir?</h4>
+                            <h4>EN SIK KULLANILAN ARAYÜZ MOTİFLERİ NELERDİR?</h4>
                             <div class="card-body-detail">
                                 <span class="date">
                                     <i class="fa-regular fa-calendar-minus"></i>
@@ -257,7 +257,7 @@
                             <img class="img-fluid" src="assets/img/blog/img-1.png">
                         </div>
                         <div class="card-body">
-                            <h4>en sık kullanılan arayüz motifleri nelerdir?</h4>
+                            <h4>EN SIK KULLANILAN ARAYÜZ MOTİFLERİ NELERDİR?</h4>
                             <div class="card-body-detail">
                                 <span class="date">
                                     <i class="fa-regular fa-calendar-minus"></i>
@@ -274,7 +274,7 @@
                             <img class="img-fluid" src="assets/img/blog/img-2.png">
                         </div>
                         <div class="card-body">
-                            <h4>en sık kullanılan arayüz motifleri nelerdir?</h4>
+                            <h4>EN SIK KULLANILAN ARAYÜZ MOTİFLERİ NELERDİR?</h4>
                             <div class="card-body-detail">
                                 <span class="date">
                                     <i class="fa-regular fa-calendar-minus"></i>
@@ -291,7 +291,7 @@
                             <img class="img-fluid" src="assets/img/blog/img-3.png">
                         </div>
                         <div class="card-body">
-                            <h4>en sık kullanılan arayüz motifleri nelerdir?</h4>
+                            <h4>EN SIK KULLANILAN ARAYÜZ MOTİFLERİ NELERDİR?</h4>
                             <div class="card-body-detail">
                                 <span class="date">
                                     <i class="fa-regular fa-calendar-minus"></i>
