--- a/hizmet-detay.html
+++ b/hizmet-detay.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-    <title>Aqua</title>
+    <title>Real Web Tasarım</title>
 
 
     <!-- Vendor  Css files -->
@@ -68,7 +68,7 @@
                 <input type="text" placeholder="ARA">
             </div>
             <i class="bi bi-list navbar-toggle d-block d-lg-none order-2 "></i>
-            <a class="btn-teklif d-none d-xl-block order-5" href="index.html#teklif">Teklif Al</a>
+            <a class="btn-teklif d-none d-xl-block order-5" href="index.html#teklif">TEKLİF AL</a>
 
     </header>
     <!-- Header Side END -->
@@ -92,7 +92,7 @@
                             <p>
                                 Markanızı daha üst bir boyuta taşımak için, bir logo tasarımına ihtiyacınız bulunmaktadır. Böylelikle bilinirliğiniz ile piyasadaki yerinizi alabilirsiniz.
                             </p>
-                            <a class="btn-teklif" href="#">Teklif Al</a>
+                            <a class="btn-teklif" href="#">TEKLİF AL</a>
                         </div>
 
                     </div>
@@ -126,7 +126,7 @@
                         <a href="referans-detay.html"> <img src="assets/img/referanslar/references-1.png" class="img-fluid"></a>
                         <div class="img-content">
                             <h4>Koç Holding</h4>
-                            <h5>Makine yönetimi Sitesi</h5>
+                            <h5>MAKİNE YÖNETİMİ SİTESİ</h5>
                         </div>
                     </div>
                 </div>
@@ -135,7 +135,7 @@
                         <a href="referans-detay.html"> <img src="assets/img/referanslar/references-2.png" class="img-fluid"></a>
                         <div class="img-content">
                             <h4>Koç Holding</h4>
-                            <h5>Makine yönetimi Sitesi</h5>
+                            <h5>MAKİNE YÖNETİMİ SİTESİ</h5>
                         </div>
                     </div>
                 </div>
@@ -147,7 +147,7 @@
                         <a href="referans-detay.html"> <img src="assets/img/referanslar/references-1.png" class="img-fluid"></a>
                         <div class="img-content">
                             <h4>Koç Holding</h4>
-                            <h5>Makine yönetimi Sitesi</h5>
+                            <h5>MAKİNE YÖNETİMİ SİTESİ</h5>
                         </div>
                     </div>
                 </div>
@@ -156,7 +156,7 @@
                         <a href="referans-detay.html"> <img src="assets/img/referanslar/references-2.png" class="img-fluid"></a>
                         <div class="img-content">
                             <h4>Koç Holding</h4>
-                            <h5>Makine yönetimi Sitesi</h5>
+                            <h5>MAKİNE YÖNETİMİ SİTESİ</h5>
                         </div>
                     </div>
                 </div>
@@ -169,7 +169,7 @@
                         <a href="referans-detay.html"> <img src="assets/img/referanslar/references-1.png" class="img-fluid"></a>
                         <div class="img-content">
                             <h4>Koç Holding</h4>
-                            <h5>Makine yönetimi Sitesi</h5>
+                            <h5>MAKİNE YÖNETİMİ SİTESİ</h5>
                         </div>
                     </div>
                 </div>
@@ -178,7 +178,7 @@
                         <a href="referans-detay.html"> <img src="assets/img/referanslar/references-2.png" class="img-fluid"></a>
                         <div class="img-content">
                             <h4>Koç Holding</h4>
-                            <h5>Makine yönetimi Sitesi</h5>
+                            <h5>MAKİNE YÖNETİMİ SİTESİ</h5>
                         </div>
                     </div>
                 </div>
