--- a/hizmetler.html
+++ b/hizmetler.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-    <title>Aqua</title>
+    <title>Real Web Tasarım</title>
 
 
     <!-- Vendor  Css files -->
@@ -68,7 +68,7 @@
                 <input type="text" placeholder="ARA">
             </div>
             <i class="bi bi-list navbar-toggle d-block d-lg-none order-2 "></i>
-            <a class="btn-teklif d-none d-xl-block order-5" href="index.html#teklif">Teklif Al</a>
+            <a class="btn-teklif d-none d-xl-block order-5" href="index.html#teklif">TEKLİF AL</a>
 
     </header>
     <!-- Header Side END -->
@@ -80,17 +80,17 @@
             <ol id="myTab" role="tablist"
                 class="d-flex justify-content-lg-between justify-content-center flex-wrap flex-lg-nowrap">
                 <li class="active" filter="*">Tümü</li>
-                <li filter=".website">Website</li>
+                <li filter=".WEBSİTE">WEBSİTE</li>
                 <li filter=".logo">Logo</li>
-                <li filter=".kurumsal">Kurumsal Kimlik</li>
+                <li filter=".kurumsal">KURUMSAL KİMLİK</li>
                 <li filter=".sosyal">Sosyal Medya</li>
-                <li filter=".rek">Reklam Yönetimi</li>
+                <li filter=".rek">REKLAM YÖNETİMİ</li>
             </ol>
 
             <div class="row gy-5 justify-content-lg-start justify-content-center servicesIsotope">
 
                 <!-- 1. üçlü START-->
-                <div class="col-xl-4 col-md-6 website ilksira">
+                <div class="col-xl-4 col-md-6 WEBSİTE ilksira">
                     <div class="blog-card">
                         <div class="card-head">
                             <img class="img-fluid" src="assets/img/blog/img-1.png">
@@ -152,7 +152,7 @@
                     </div>
                 </div>
 
-                <div class="col-xl-4 col-md-6 website ilksira">
+                <div class="col-xl-4 col-md-6 WEBSİTE ilksira">
                     <div class="blog-card">
                         <div class="card-head">
                             <img class="img-fluid" src="assets/img/blog/img-1.png">
