--- a/iletisim.html
+++ b/iletisim.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-    <title>Aqua</title>
+    <title>Real Web Tasarım</title>
 
 
     <!-- Vendor  Css files -->
@@ -59,7 +59,7 @@
                         </li>
                         <li><a href="referanslar.html">Referanslar</a></li>
                         <li><a href="blog.html">Blog</a></li>
-                        <li><a class="active" href="iletisim.html">İletişim</a></li>
+                        <li><a class="active" href="iletisim.html">İLETİŞİM</a></li>
                     </ol>
                 </nav>
             </div>
@@ -68,7 +68,7 @@
                 <input type="text" placeholder="ARA">
             </div>
             <i class="bi bi-list navbar-toggle d-block d-lg-none order-2 "></i>
-            <a class="btn-teklif d-none d-xl-block order-5" href="index.html#teklif">Teklif Al</a>
+            <a class="btn-teklif d-none d-xl-block order-5" href="index.html#teklif">TEKLİF AL</a>
 
     </header>
     <!-- Header Side END -->
