--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-    <title>Aqua</title>
+    <title>Real Web Tasarım</title>
 
 
     <!-- Vendor  Css files -->
@@ -68,7 +68,7 @@
                 <input type="text" placeholder="ARA">
             </div>
             <i class="bi bi-list navbar-toggle d-block d-lg-none order-2 "></i>
-            <a class="btn-teklif d-none d-xl-block order-5" href="index.html#teklif">Teklif Al</a>
+            <a class="btn-teklif d-none d-xl-block order-5" href="index.html#teklif">TEKLİF AL</a>
 
     </header>
     <!-- Header Side END -->
@@ -135,11 +135,11 @@
             <ol id="myTab" role="tablist"
                 class="d-flex justify-content-lg-between justify-content-center flex-wrap flex-lg-nowrap">
                 <li class="active" filter="all">Tümü</li>
-                <li filter="website">Website</li>
+                <li filter="WEBSİTE">WEBSİTE</li>
                 <li filter="logo">Logo</li>
-                <li filter="kurumsal">Kurumsal Kimlik</li>
+                <li filter="kurumsal">KURUMSAL KİMLİK</li>
                 <li filter="sosyal">Sosyal Medya</li>
-                <li filter="reklam">Reklam Yönetimi</li>
+                <li filter="reklam">REKLAM YÖNETİMİ</li>
             </ol>
 
             <div class="swiper-container">
@@ -152,18 +152,18 @@
                                         class="img-fluid"></a>
                                 <div class="img-content">
                                     <h4>Koç Holding Sosyal</h4>
-                                    <h5>Makine yönetimi Sitesi</h5>
+                                    <h5>MAKİNE YÖNETİMİ SİTESİ</h5>
                                 </div>
                             </div>
                         </div>
 
-                        <div class="swiper-slide website all">
+                        <div class="swiper-slide WEBSİTE all">
                             <div class="img-body">
                                 <a href="#"><img src="assets/img/neler-yapıyoruz-slides/neler-yapiyoruz-1.png"
                                         class="img-fluid"></a>
                                 <div class="img-content">
-                                    <h4>Koç Holding Website</h4>
-                                    <h5>Makine yönetimi Sitesi</h5>
+                                    <h4>Koç Holding WEBSİTE</h4>
+                                    <h5>MAKİNE YÖNETİMİ SİTESİ</h5>
                                 </div>
                             </div>
                         </div>
@@ -173,7 +173,7 @@
                                         class="img-fluid"></a>
                                 <div class="img-content">
                                     <h4>Koç Holding Logo</h4>
-                                    <h5>Makine yönetimi Sitesi</h5>
+                                    <h5>MAKİNE YÖNETİMİ SİTESİ</h5>
                                 </div>
                             </div>
                         </div>
@@ -183,7 +183,7 @@
                                         class="img-fluid"></a>
                                 <div class="img-content">
                                     <h4>Koç Holding Kurumsal</h4>
-                                    <h5>Makine yönetimi Sitesi</h5>
+                                    <h5>MAKİNE YÖNETİMİ SİTESİ</h5>
                                 </div>
                             </div>
                         </div>
@@ -223,7 +223,7 @@
                             <div class="what-card">
                                 <img src="assets/img/baska-neler-yapıyoruz-slides/img-2.png" class="img-fluid">
                                 <h4>
-                                    Kurulsal <br class="d-none d-sm-block"> Seo
+                                    KURUMSAL <br class="d-none d-sm-block"> Seo
                                 </h4>
                             </div>
                         </div>
@@ -231,7 +231,7 @@
                             <div class="what-card">
                                 <img src="assets/img/baska-neler-yapıyoruz-slides/img-3.png" class="img-fluid">
                                 <h4>
-                                    E-Ticaret
+                                    E-TİCARET
                                 </h4>
                             </div>
                         </div>
@@ -292,7 +292,7 @@
                                     <img class="img-fluid" src="assets/img/blog/img-1.png">
                                 </div>
                                 <div class="card-body">
-                                    <h4>en sık kullanılan arayüz motifleri nelerdir?</h4>
+                                    <h4>EN SIK KULLANILAN ARAYÜZ MOTİFLERİ NELERDİR?</h4>
                                     <div class="card-body-detail">
                                         <span class="date">
                                             <i class="fa-regular fa-calendar-minus"></i>
@@ -310,7 +310,7 @@
                                     <img class="img-fluid" src="assets/img/blog/img-2.png">
                                 </div>
                                 <div class="card-body">
-                                    <h4>en sık kullanılan arayüz motifleri nelerdir?</h4>
+                                    <h4>EN SIK KULLANILAN ARAYÜZ MOTİFLERİ NELERDİR?</h4>
                                     <div class="card-body-detail">
                                         <span class="date">
                                             <i class="fa-regular fa-calendar-minus"></i>
@@ -328,7 +328,7 @@
                                     <img class="img-fluid" src="assets/img/blog/img-2.png">
                                 </div>
                                 <div class="card-body">
-                                    <h4>en sık kullanılan arayüz motifleri nelerdir?</h4>
+                                    <h4>EN SIK KULLANILAN ARAYÜZ MOTİFLERİ NELERDİR?</h4>
                                     <div class="card-body-detail">
                                         <span class="date">
                                             <i class="fa-regular fa-calendar-minus"></i>
@@ -393,7 +393,7 @@
                                             hikayesidir. Barbaros Yarkın’ın öyküsü hepimize ilham verirken…</p>
                                         <div class="buttons">
                                             <a class="active" href="">Devamını Oku</a>
-                                            <a href="">Teklif Al</a>
+                                            <a href="">TEKLİF AL</a>
                                         </div>
                                     </div>
                                 </div>
