--- a/raf.html
+++ b/raf.html
@@ -16,17 +16,17 @@
               <li><a href="">Web Tasarım</a></li>
               <li><a href="">Web Yazılım</a></li>
               <li><a href="">Kurumsal SEO</a></li>
-              <li><a href="">E-Ticaret</a></li>
-              <li><a href="">Reklam Yönetimi</a></li>
+              <li><a href="">E-TİCARET</a></li>
+              <li><a href="">REKLAM YÖNETİMİ</a></li>
               <li><a href="">Sosyal Medya</a></li>
-              <li><a href="">Kurumsal Kimlik</a></li>
+              <li><a href="">KURUMSAL KİMLİK</a></li>
               <li><a href="">Logo</a></li>
 
             </ul>
           </li>
           <li><a href="">Referanslar</a></li>
           <li><a href="">Blog</a></li>
-          <li><a href="">İletişim</a></li>
+          <li><a href="">İLETİŞİM</a></li>
         </ol>
       </nav>
 
@@ -36,7 +36,7 @@
       </div>
     </div>
     <i class="bi bi-list navbar-toggle d-block d-lg-none order-2 "></i>
-    <a class="btn-teklif d-none d-xl-block order-5" href="index.html#teklif">Teklif Al</a>
+    <a class="btn-teklif d-none d-xl-block order-5" href="index.html#teklif">TEKLİF AL</a>
 
 </header>
 <!-- Header Side END -->
@@ -80,7 +80,7 @@
       </div>
     </div>
     <i class="bi bi-list navbar-toggle d-block d-lg-none order-2 "></i>
-    <a class="btn-teklif d-none d-xl-block order-5" href="index.html#teklif">Teklif Al</a>
+    <a class="btn-teklif d-none d-xl-block order-5" href="index.html#teklif">TEKLİF AL</a>
 
 </header>
 <!-- Header Side END -->
