--- a/referanslar.html
+++ b/referanslar.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-    <title>Aqua</title>
+    <title>Real Web Tasarım</title>
 
 
     <!-- Vendor  Css files -->
@@ -68,7 +68,7 @@
                 <input type="text" placeholder="ARA">
             </div>
             <i class="bi bi-list navbar-toggle d-block d-lg-none order-2 "></i>
-            <a class="btn-teklif d-none d-xl-block order-5" href="index.html#teklif">Teklif Al</a>
+            <a class="btn-teklif d-none d-xl-block order-5" href="index.html#teklif">TEKLİF AL</a>
 
     </header>
     <!-- Header Side END -->
@@ -78,23 +78,23 @@
             <ol id="myTab" role="tablist"
                 class="d-flex justify-content-lg-between justify-content-center flex-wrap flex-lg-nowrap">
                 <li class="active" filter="*">Tümü</li>
-                <li filter=".website">Website</li>
+                <li filter=".WEBSİTE">WEBSİTE</li>
                 <li filter=".logo">Logo</li>
-                <li filter=".kurumsal">Kurumsal Kimlik</li>
+                <li filter=".kurumsal">KURUMSAL KİMLİK</li>
                 <li filter=".sosyal">Sosyal Medya</li>
-                <li filter=".rek">Reklam Yönetimi</li>
+                <li filter=".rek">REKLAM YÖNETİMİ</li>
             </ol>
 
             <div class="row g-4 justify-content-lg-start justify-content-center referencesIsotope">
 
                 <!-- 1. ikili -->
-                <div class="col-lg-6 col-12  website ilksira">
+                <div class="col-lg-6 col-12  WEBSİTE ilksira">
                     <div class="img-body">
                         <a href="referans-detay.html"> <img src="assets/img/referanslar/references-1.png"
                                 class="img-fluid"></a>
                         <div class="img-content">
                             <h4>Koç Holding</h4>
-                            <h5>Makine yönetimi Sitesi</h5>
+                            <h5>MAKİNE YÖNETİMİ SİTESİ</h5>
                         </div>
                     </div>
                 </div>
@@ -104,7 +104,7 @@
                                 class="img-fluid"></a>
                         <div class="img-content">
                             <h4>Koç Holding</h4>
-                            <h5>Makine yönetimi Sitesi</h5>
+                            <h5>MAKİNE YÖNETİMİ SİTESİ</h5>
                         </div>
                     </div>
                 </div>
@@ -117,7 +117,7 @@
                                 class="img-fluid"></a>
                         <div class="img-content">
                             <h4>Koç Holding</h4>
-                            <h5>Makine yönetimi Sitesi</h5>
+                            <h5>MAKİNE YÖNETİMİ SİTESİ</h5>
                         </div>
                     </div>
                 </div>
@@ -127,7 +127,7 @@
                                 class="img-fluid"></a>
                         <div class="img-content">
                             <h4>Koç Holding</h4>
-                            <h5>Makine yönetimi Sitesi</h5>
+                            <h5>MAKİNE YÖNETİMİ SİTESİ</h5>
                         </div>
                     </div>
                 </div>
@@ -140,30 +140,30 @@
                                 class="img-fluid"></a>
                         <div class="img-content">
                             <h4>Koç Holding</h4>
-                            <h5>Makine yönetimi Sitesi</h5>
+                            <h5>MAKİNE YÖNETİMİ SİTESİ</h5>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6 col-12 website ilksira">
+                <div class="col-lg-6 col-12 WEBSİTE ilksira">
                     <div class="img-body">
                         <a href="referans-detay.html"> <img src="assets/img/referanslar/references-2.png"
                                 class="img-fluid"></a>
                         <div class="img-content">
                             <h4>Koç Holding</h4>
-                            <h5>Makine yönetimi Sitesi</h5>
+                            <h5>MAKİNE YÖNETİMİ SİTESİ</h5>
                         </div>
                     </div>
                 </div>
                 <!-- 3. ikili -->
 
                 <!-- 4. ikili -->
-                <div class="col-lg-6 col-12  website ilksira">
+                <div class="col-lg-6 col-12  WEBSİTE ilksira">
                     <div class="img-body">
                         <a href="referans-detay.html"> <img src="assets/img/referanslar/references-1.png"
                                 class="img-fluid"></a>
                         <div class="img-content">
                             <h4>Koç Holding</h4>
-                            <h5>Makine yönetimi Sitesi</h5>
+                            <h5>MAKİNE YÖNETİMİ SİTESİ</h5>
                         </div>
                     </div>
                 </div>
@@ -173,7 +173,7 @@
                                 class="img-fluid"></a>
                         <div class="img-content">
                             <h4>Koç Holding</h4>
-                            <h5>Makine yönetimi Sitesi</h5>
+                            <h5>MAKİNE YÖNETİMİ SİTESİ</h5>
                         </div>
                     </div>
                 </div>
