--- a/referans-detay.html
+++ b/referans-detay.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-    <title>Aqua</title>
+    <title>Real Web Tasarım</title>
 
 
     <!-- Vendor  Css files -->
@@ -68,7 +68,7 @@
                 <input type="text" placeholder="ARA">
             </div>
             <i class="bi bi-list navbar-toggle d-block d-lg-none order-2 "></i>
-            <a class="btn-teklif d-none d-xl-block order-5" href="index.html#teklif">Teklif Al</a>
+            <a class="btn-teklif d-none d-xl-block order-5" href="index.html#teklif">TEKLİF AL</a>
 
     </header>
     <!-- Header Side END -->
@@ -120,7 +120,7 @@
                 </div>
             </div>
 
-            <h3 class="content-title">Diğer İşler</h3>
+            <h3 class="content-title">DİĞER İŞLER</h3>
 
             <div class="swiper-container">
 
@@ -131,7 +131,7 @@
                              <a href="#"><img src="assets/img/neler-yapıyoruz-slides/neler-yapiyoruz-1.png" class="img-fluid"></a>
                                 <div class="img-content">
                                     <h4>Koç Holding</h4>
-                                    <h5>Makine yönetimi Sitesi</h5>
+                                    <h5>MAKİNE YÖNETİMİ SİTESİ</h5>
                                 </div>
                             </div>
                         </div>
@@ -140,7 +140,7 @@
                                 <a href="#"><img src="assets/img/neler-yapıyoruz-slides/neler-yapiyoruz-1.png" class="img-fluid"></a>
                                 <div class="img-content">
                                     <h4>Koç Holding</h4>
-                                    <h5>Makine yönetimi Sitesi</h5>
+                                    <h5>MAKİNE YÖNETİMİ SİTESİ</h5>
                                 </div>
                             </div>
                         </div>
@@ -149,7 +149,7 @@
                                 <a href="#"><img src="assets/img/neler-yapıyoruz-slides/neler-yapiyoruz-1.png" class="img-fluid"></a>
                                 <div class="img-content">
                                     <h4>Koç Holding</h4>
-                                    <h5>Makine yönetimi Sitesi</h5>
+                                    <h5>MAKİNE YÖNETİMİ SİTESİ</h5>
                                 </div>
                             </div>
                         </div>
