--- a/blog.html
+++ b/blog.html
@@ -317,7 +317,7 @@
         <div class="container">
             <div class="row gy-5 justify-content-between justify-content-lg-start">
                 <div class="col-lg-7 col-md-4 text-center text-md-start">
-                    <img src="assets/img/logo.png">
+                       <a href="index.html"><img src="assets/img/logo.png"></a>
                     <h5>Yoldaki Dijital dünyaya <br class="d-none d-lg-block"> açılan ortağınız</h5>
                     <h5 class="mail">info@realwebtasarim.com</h5>
                     <div class="social-medias justify-content-center justify-content-md-start">
