--- a/blog-detay.html
+++ b/blog-detay.html
@@ -40,10 +40,11 @@
             <div class="d-block d-lg-flex align-items-center navbar-container order-3 ">
                 <nav class="d-block d-lg-flex d-lg-flex pt-4 pt-lg-0">
                     <ol class="navbar flex-column flex-lg-row d-lg-flex d-block">
-                        <li><a href="index.html">anasayfa</a></li>
+                        <li><a href="index.html">ANASAYFA</a></li>
                         <li><a href="hakkimizda.html">hakkımızda</a></li>
-                        <li class="dropdown">
-                            <a class="active" href="JavaScript:Void(0)">Bütün Sayfalar</a>
+                        <li><a href="hizmetler.html">HİZMETLERİMİZ</a></li>
+                        <!-- <li class="dropdown">
+                            <a href="JavaScript:Void(0)">Bütün Sayfalar</a>
                             <ul class="dropdown-content">
                                 <li><a href="hizmetler.html">Hizmetler</a></li>
                                 <li><a href="hizmet-detay.html">Hizmet Detay</a></li>
@@ -56,10 +57,10 @@
                                 <li><a href="blog-detay.html">Blog Detay</a></li>
 
                             </ul>
-                        </li>
+                        </li> -->
                         <li><a href="referanslar.html">Referanslar</a></li>
-                        <li><a href="blog.html">Blog</a></li>
-                        <li><a href="iletisim.html">İletişim</a></li>
+                        <li><a class="active" href="blog.html">Blog</a></li>
+                        <li><a href="iletisim.html">İLETİŞİM</a></li>
                     </ol>
                 </nav>
             </div>
