--- a/referans-detaylar/volt-aku.html
+++ b/referans-detaylar/volt-aku.html
@@ -9,21 +9,21 @@
 
 
     <!-- Vendor  Css files -->
-    <link re l="stylesheet" href="assets/vendor/aos/aos.css">
-    <link rel="stylesheet" href="assets/vendor/bootstrap-5.1.3/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/vendor/bootstrap-icons/bootstrap-icons.css">
-    <link rel="stylesheet" href="assets/vendor/glightbox/css/glightbox.css">
-    <link rel="stylesheet" href="assets/vendor/swipperjs/swiper-bundle.min.css">
-    <link rel="stylesheet" href="assets/vendor/boxicons/css/boxicons.min.css">
+    <link re l="stylesheet" href="../assets/vendor/aos/aos.css">
+    <link rel="stylesheet" href="../assets/vendor/bootstrap-5.1.3/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../assets/vendor/bootstrap-icons/bootstrap-icons.css">
+    <link rel="stylesheet" href="../assets/vendor/glightbox/css/glightbox.css">
+    <link rel="stylesheet" href="../assets/vendor/swipperjs/swiper-bundle.min.css">
+    <link rel="stylesheet" href="../assets/vendor/boxicons/css/boxicons.min.css">
 
     <!-- Font Awesome Tanımlaması -->
-    <link rel="stylesheet" href="assets/vendor/font-awesome/css/fontawesome.min.css">
-    <link rel="stylesheet" href="assets/vendor/font-awesome/css/solid.min.css">
-    <link rel="stylesheet" href="assets/vendor/font-awesome/css/regular.min.css">
-    <link rel="stylesheet" href="assets/vendor/font-awesome/css/brands.min.css">
+    <link rel="stylesheet" href="../assets/vendor/font-awesome/css/fontawesome.min.css">
+    <link rel="stylesheet" href="../assets/vendor/font-awesome/css/solid.min.css">
+    <link rel="stylesheet" href="../assets/vendor/font-awesome/css/regular.min.css">
+    <link rel="stylesheet" href="../assets/vendor/font-awesome/css/brands.min.css">
 
     <!-- Main Css Files -->
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="../assets/css/style.css">
 
 
 </head>
@@ -32,17 +32,16 @@
 
     <!-- =========== Header Side =========== -->
     <header id="header">
-        <div
-            class="p-lg-0 px-5 container-fluid justify-content-xl-between justify-content-between justify-content-lg-around d-flex align-items-center flex-wrap flex-lg-nowrap">
+        <div class="p-lg-0 px-5 container-fluid justify-content-xl-between justify-content-between justify-content-lg-around d-flex align-items-center flex-wrap flex-lg-nowrap">
             <div class="logo order-0 ">
-                <a href="index.html"> <img src="assets/img/logo.png" alt="gerçek web tasarım"></a>
+                <a href="../index.html"> <img src="../assets/img/logo.png" alt="gerçek web tasarım"></a>
             </div>
             <div class="d-block d-lg-flex align-items-center navbar-container order-3 ">
                 <nav class="d-block d-lg-flex d-lg-flex pt-4 pt-lg-0">
                     <ol class="navbar flex-column flex-lg-row d-lg-flex d-block">
-                        <li><a href="index.html">ANASAYFA</a></li>
-                        <li><a href="hakkimizda.html">hakkımızda</a></li>
-                        <li><a href="hizmetler.html">HİZMETLERİMİZ</a></li>
+                        <li><a href="../index.html">ANASAYFA</a></li>
+                        <li><a href="../hakkimizda.html">hakkımızda</a></li>
+                        <li><a href="../hizmetler.html">HİZMETLERİMİZ</a></li>
                         <!-- <li class="dropdown">
                             <a href="JavaScript:Void(0)">Bütün Sayfalar</a>
                             <ul class="dropdown-content">
@@ -58,9 +57,9 @@
 
                             </ul>
                         </li> -->
-                        <li><a class="active" href="referanslar.html">Referanslar</a></li>
-                        <li><a href="blog.html">Blog</a></li>
-                        <li><a href="iletisim.html">İLETİŞİM</a></li>
+                        <li><a class="active" href="../referanslar.html">Referanslar</a></li>
+                        <li><a href="../blog.html">Blog</a></li>
+                        <li><a href="../iletisim.html">İLETİŞİM</a></li>
                     </ol>
                 </nav>
             </div>
@@ -81,18 +80,18 @@
                 <div class="row gy-5 position-relative">
                     <div class="col-lg-6 order-1 order-lg-0">
                         <div class="card-container">
-                            <h4>ERHAN HUKUK <br class="d-none d-lg-block">
-                                WEB SİTESİ <br class="d-none d-lg-block">
-                                RESTORASYON</h4>
+                            <h4>VOLT AKÜ <br class="d-none d-lg-block"> WEBSİTE
+                            </h4>
 
                             <h5>Teknoloji</h5>
                             <p>HTML5, CSS3, PHP, Javascript, JQuery, Responsive, W3C</p>
                             <h5>Hizmet Türü</h5>
                             <p>Domain, Hosting, Web Tasarım, Panel Yönetimi, Responsive Tasarım, Multi-Page SEO</p>
+                            <p><a href="https://www.voltaku.com.tr " class="link"><b>www.voltaku.com.tr </b></a></p>
                         </div>
                     </div>
                     <div class="col-lg-6 order-0 order-lg-1">
-                        <img src="assets/img/referanslar-detay/silder-1.png" class="img-fluid">
+                        <img src="../assets/img/referanslar-detay/volt-aku/thumbnail.png" class="img-fluid">
                     </div>
                 </div>
                 <div class="d-flex justify-content-center">
@@ -111,13 +110,10 @@
 
             <div class="row gy-5">
                 <div class="col-12">
-                    <img src="assets/img/referanslar-detay/detail-1.png" class="img-fluid">
+                    <img src="../assets/img/referanslar-detay/volt-aku/img-1.png" class="img-fluid">
                 </div>
                 <div class="col-12">
-                    <img src="assets/img/referanslar-detay/detail-2.png" class="img-fluid">
-                </div>
-                <div class="col-12">
-                    <img src="assets/img/referanslar-detay/detail-3.png" class="img-fluid">
+                    <img src="../assets/img/referanslar-detay/volt-aku/img-2.png" class="img-fluid">
                 </div>
             </div>
 
@@ -129,7 +125,7 @@
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
                             <div class="img-body">
-                             <a href="#"><img src="assets/img/neler-yapıyoruz-slides/neler-yapiyoruz-1.png" class="img-fluid"></a>
+                                <a href="#"><img src="../assets/img/neler-yapıyoruz-slides/neler-yapiyoruz-1.png" class="img-fluid"></a>
                                 <div class="img-content">
                                     <h4>Koç Holding</h4>
                                     <h5>MAKİNE YÖNETİMİ SİTESİ</h5>
@@ -138,7 +134,7 @@
                         </div>
                         <div class="swiper-slide">
                             <div class="img-body">
-                                <a href="#"><img src="assets/img/neler-yapıyoruz-slides/neler-yapiyoruz-1.png" class="img-fluid"></a>
+                                <a href="#"><img src="../assets/img/neler-yapıyoruz-slides/neler-yapiyoruz-1.png" class="img-fluid"></a>
                                 <div class="img-content">
                                     <h4>Koç Holding</h4>
                                     <h5>MAKİNE YÖNETİMİ SİTESİ</h5>
@@ -147,7 +143,7 @@
                         </div>
                         <div class="swiper-slide">
                             <div class="img-body">
-                                <a href="#"><img src="assets/img/neler-yapıyoruz-slides/neler-yapiyoruz-1.png" class="img-fluid"></a>
+                                <a href="#"><img src="../assets/img/neler-yapıyoruz-slides/neler-yapiyoruz-1.png" class="img-fluid"></a>
                                 <div class="img-content">
                                     <h4>Koç Holding</h4>
                                     <h5>MAKİNE YÖNETİMİ SİTESİ</h5>
@@ -173,7 +169,7 @@
         <div class="container">
             <div class="row gy-5 justify-content-between justify-content-lg-start">
                 <div class="col-lg-7 col-md-4 text-center text-md-start">
-                       <a href="index.html"><img src="assets/img/logo.png"></a>
+                    <a href="index.html"><img src="../assets/img/logo.png"></a>
                     <h5>Yoldaki Dijital dünyaya <br class="d-none d-lg-block"> açılan ortağınız</h5>
                     <h5 class="mail">info@realwebtasarim.com</h5>
                     <div class="social-medias justify-content-center justify-content-md-start">
@@ -234,17 +230,17 @@
 
 
     <!-- Vendor Js Files File-->
-    <script src="assets/vendor/jquerry/jquery-3.6.0.min.js"></script>
-    <script src="assets/vendor/aos/aos.js"></script>
-    <script src="assets/vendor/bootstrap-5.1.3/js/bootstrap.min.js"></script>
-    <script src="assets/vendor/glightbox/js/glightbox.js"></script>
-    <script src="assets/vendor/isotope-layout/isotope.pkgd.js"></script>
-    <script src="assets/vendor/php-email-form/validate.js"></script>
-    <script src="assets/vendor/swipperjs/swiper-bundle.min.js"></script>
-    <script src="assets/vendor/waypoint/jquery.waypoints.js"></script>
+    <script src="../assets/vendor/jquerry/jquery-3.6.0.min.js"></script>
+    <script src="../assets/vendor/aos/aos.js"></script>
+    <script src="../assets/vendor/bootstrap-5.1.3/js/bootstrap.min.js"></script>
+    <script src="../assets/vendor/glightbox/js/glightbox.js"></script>
+    <script src="../assets/vendor/isotope-layout/isotope.pkgd.js"></script>
+    <script src="../assets/vendor/php-email-form/validate.js"></script>
+    <script src="../assets/vendor/swipperjs/swiper-bundle.min.js"></script>
+    <script src="../assets/vendor/waypoint/jquery.waypoints.js"></script>
 
     <!-- Main Js Source File -->
-    <script src="assets/js/main.js"></script>
+    <script src="../assets/js/main.js"></script>
 
 </body>
 
