--- a/referanslar.html
+++ b/referanslar.html
@@ -32,17 +32,17 @@
 
     <!-- =========== Header Side =========== -->
     <header id="header">
-        <div
-            class="p-lg-0 px-5 container-fluid justify-content-xl-between justify-content-between justify-content-lg-around d-flex align-items-center flex-wrap flex-lg-nowrap">
+        <div class="p-lg-0 px-5 container-fluid justify-content-xl-between justify-content-between justify-content-lg-around d-flex align-items-center flex-wrap flex-lg-nowrap">
             <div class="logo order-0 ">
                 <a href="index.html"> <img src="assets/img/logo.png" alt="gerçek web tasarım"></a>
             </div>
             <div class="d-block d-lg-flex align-items-center navbar-container order-3 ">
                 <nav class="d-block d-lg-flex d-lg-flex pt-4 pt-lg-0">
                     <ol class="navbar flex-column flex-lg-row d-lg-flex d-block">
-                        <li><a href="index.html">anasayfa</a></li>
+                        <li><a href="index.html">ANASAYFA</a></li>
                         <li><a href="hakkimizda.html">hakkımızda</a></li>
-                        <li class="dropdown">
+                        <li><a href="hizmetler.html">HİZMETLERİMİZ</a></li>
+                        <!-- <li class="dropdown">
                             <a href="JavaScript:Void(0)">Bütün Sayfalar</a>
                             <ul class="dropdown-content">
                                 <li><a href="hizmetler.html">Hizmetler</a></li>
@@ -56,10 +56,10 @@
                                 <li><a href="blog-detay.html">Blog Detay</a></li>
 
                             </ul>
-                        </li>
+                        </li> -->
                         <li><a class="active" href="referanslar.html">Referanslar</a></li>
                         <li><a href="blog.html">Blog</a></li>
-                        <li><a href="iletisim.html">İletişim</a></li>
+                        <li><a href="iletisim.html">İLETİŞİM</a></li>
                     </ol>
                 </nav>
             </div>
@@ -75,10 +75,9 @@
     <section id="references">
         <div class="container">
             <h3>referanslar</h3>
-            <ol id="myTab" role="tablist"
-                class="d-flex justify-content-lg-between justify-content-center flex-wrap flex-lg-nowrap">
+            <ol id="myTab" role="tablist" class="d-flex justify-content-lg-between justify-content-center flex-wrap flex-lg-nowrap">
                 <li class="active" filter="*">Tümü</li>
-                <li filter=".WEBSİTE">WEBSİTE</li>
+                <li filter=".website">WEBSİTE</li>
                 <li filter=".logo">Logo</li>
                 <li filter=".kurumsal">KURUMSAL KİMLİK</li>
                 <li filter=".sosyal">Sosyal Medya</li>
@@ -88,96 +87,153 @@
             <div class="row g-4 justify-content-lg-start justify-content-center referencesIsotope">
 
                 <!-- 1. ikili -->
-                <div class="col-lg-6 col-12  WEBSİTE ilksira">
+                <div class="col-lg-6 col-12  website ilksira">
                     <div class="img-body">
-                        <a href="referans-detay.html"> <img src="assets/img/referanslar/references-1.png"
-                                class="img-fluid"></a>
+                        <a href="referans-detaylar/garden-life-exclusive.html"> <img src="assets/img/referanslar-detay/garden-life/thumbnail.png" class="img-fluid"></a>
                         <div class="img-content">
-                            <h4>Koç Holding</h4>
-                            <h5>MAKİNE YÖNETİMİ SİTESİ</h5>
+                            <h4>GARDEN LIFE</h4>
+                            <h5>EXCLUSIVE WEBSİTE</h5>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6 col-12 logo ilksira">
+                <div class="col-lg-6 col-12  website ilksira">
                     <div class="img-body">
-                        <a href="referans-detay.html"> <img src="assets/img/referanslar/references-2.png"
-                                class="img-fluid"></a>
+                        <a href="referans-detaylar/wayson-lighting.html"> <img src="assets/img/referanslar-detay/wayson-lighting/thumbnail.png" class="img-fluid"></a>
                         <div class="img-content">
-                            <h4>Koç Holding</h4>
-                            <h5>MAKİNE YÖNETİMİ SİTESİ</h5>
+                            <h4>WAYSON LIGHTNING WEBSİTE
+                            </h4>
+                            <h5></h5>
                         </div>
                     </div>
                 </div>
                 <!-- 1. ikili -->
 
                 <!-- 2. ikili -->
-                <div class="col-lg-6 col-12  kurumsal ilksira">
+                <div class="col-lg-6 col-12  website ilksira">
                     <div class="img-body">
-                        <a href="referans-detay.html"> <img src="assets/img/referanslar/references-1.png"
-                                class="img-fluid"></a>
+                        <a href="referans-detaylar/rapport.html"> <img src="assets/img/referanslar-detay/rapport/thumbnail.png" class="img-fluid"></a>
                         <div class="img-content">
-                            <h4>Koç Holding</h4>
-                            <h5>MAKİNE YÖNETİMİ SİTESİ</h5>
+                            <h4>RAPPORT WEBSİTE</h4>
+                            <h5></h5>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6 col-12 sosyal ilksira">
+                <div class="col-lg-6 col-12  website ilksira">
                     <div class="img-body">
-                        <a href="referans-detay.html"> <img src="assets/img/referanslar/references-2.png"
-                                class="img-fluid"></a>
+                        <a href="referans-detaylar/mavi-tur-yat-kiralama.html"> <img src="assets/img/referanslar-detay/mavi-tur-yat-kiralama/thumbnail.png" class="img-fluid"></a>
                         <div class="img-content">
-                            <h4>Koç Holding</h4>
-                            <h5>MAKİNE YÖNETİMİ SİTESİ</h5>
+                            <h4>MAVİ TUR YAT KİRALAMA WEBSİTE</h4>
+                            <h5></h5>
                         </div>
                     </div>
                 </div>
                 <!-- 2. ikili -->
 
                 <!-- 3. ikili -->
-                <div class="col-lg-6 col-12  rek ilksira">
+                <div class="col-lg-6 col-12  website ilksira">
                     <div class="img-body">
-                        <a href="referans-detay.html"> <img src="assets/img/referanslar/references-1.png"
-                                class="img-fluid"></a>
+                        <a href="referans-detaylar/polimatek.html"> <img src="assets/img/referanslar-detay/polimatek/thumbnail.png" class="img-fluid"></a>
                         <div class="img-content">
-                            <h4>Koç Holding</h4>
-                            <h5>MAKİNE YÖNETİMİ SİTESİ</h5>
+                            <h4>POLİMATEK WEBSİTE</h4>
+                            <h5></h5>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6 col-12 WEBSİTE ilksira">
+                <div class="col-lg-6 col-12  website ilksira">
                     <div class="img-body">
-                        <a href="referans-detay.html"> <img src="assets/img/referanslar/references-2.png"
-                                class="img-fluid"></a>
+                        <a href="referans-detaylar/orusan-kimya.html"> <img src="assets/img/referanslar-detay/orusan-kimya/thumbnail.png" class="img-fluid"></a>
                         <div class="img-content">
-                            <h4>Koç Holding</h4>
-                            <h5>MAKİNE YÖNETİMİ SİTESİ</h5>
+                            <h4>ORUSAN KİMYA WEBSİTE</h4>
+                            <h5></h5>
                         </div>
                     </div>
                 </div>
                 <!-- 3. ikili -->
 
                 <!-- 4. ikili -->
-                <div class="col-lg-6 col-12  WEBSİTE ilksira">
+                <div class="col-lg-6 col-12  website ilksira">
                     <div class="img-body">
-                        <a href="referans-detay.html"> <img src="assets/img/referanslar/references-1.png"
-                                class="img-fluid"></a>
+                        <a href="referans-detaylar/pera-accessories.html"> <img src="assets/img/referanslar-detay/pera-accessories/thumbnail.png" class="img-fluid"></a>
                         <div class="img-content">
-                            <h4>Koç Holding</h4>
-                            <h5>MAKİNE YÖNETİMİ SİTESİ</h5>
+                            <h4>PREA ACCESSORİES WEBSİTE
+                            </h4>
+                            <h5></h5>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6 col-12 logo ilksira">
+                <div class="col-lg-6 col-12  website ilksira">
                     <div class="img-body">
-                        <a href="referans-detay.html"> <img src="assets/img/referanslar/references-2.png"
-                                class="img-fluid"></a>
+                        <a href="referans-detaylar/troymeta.html"> <img src="assets/img/referanslar-detay/troymeta/thumbnail.png" class="img-fluid"></a>
                         <div class="img-content">
-                            <h4>Koç Holding</h4>
-                            <h5>MAKİNE YÖNETİMİ SİTESİ</h5>
+                            <h4>TROYMETAL WEBSİTE</h4>
+                            <h5></h5>
                         </div>
                     </div>
                 </div>
                 <!-- 4. ikili -->
+
+                <!-- 5. ikili -->
+                <div class="col-lg-6 col-12  website ilksira">
+                    <div class="img-body">
+                        <a href="referans-detaylar/volt-aku.html"> <img src="assets/img/referanslar-detay/volt-aku/thumbnail.png" class="img-fluid"></a>
+                        <div class="img-content">
+                            <h4>VOLT AKÜ WEBSİTE</h4>
+                            <h5></h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-12  website ilksira">
+                    <div class="img-body">
+                        <a href="referans-detaylar/aksoy-maritime.html"> <img src="assets/img/referanslar-detay/aksoy-maritime/thumbnail.png" class="img-fluid"></a>
+                        <div class="img-content">
+                            <h4>AKSOY MARITIME WEBSİTE</h4>
+                            <h5></h5>
+                        </div>
+                    </div>
+                </div>
+                <!-- 5. ikili -->
+
+                <!-- 6. ikili -->
+                <div class="col-lg-6 col-12  website ilksira">
+                    <div class="img-body">
+                        <a href="referans-detaylar/icpglobal.html"> <img src="assets/img/referanslar-detay/icpglobal/thumbnail.png" class="img-fluid"></a>
+                        <div class="img-content">
+                            <h4>İCPGLOBAL WEBSİTE</h4>
+                            <h5></h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-12  website ilksira">
+                    <div class="img-body">
+                        <a href="referans-detaylar/sennol-yetiskin.html"> <img src="assets/img/referanslar-detay/sennol-yetiskin/thumbnail.png" class="img-fluid"></a>
+                        <div class="img-content">
+                            <h4>ŞENNOL YETİŞKİN WEBSİTE</h4>
+                            <h5></h5>
+                        </div>
+                    </div>
+                </div>
+                <!-- 6. ikili -->
+
+                <!-- 7. ikili -->
+                <div class="col-lg-6 col-12  website ilksira">
+                    <div class="img-body">
+                        <a href="referans-detaylar/tat-kurumsal.html"> <img src="assets/img/referanslar-detay/tat-kurumsal/thumbnail.png" class="img-fluid"></a>
+                        <div class="img-content">
+                            <h4>TAT KURUMSAL WEBSİTE</h4>
+                            <h5></h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-12  website ilksira">
+                    <div class="img-body">
+                        <a href="referans-detaylar/umtlogistic.html"> <img src="assets/img/referanslar-detay/umtlogistic/thumbnail.png" class="img-fluid"></a>
+                        <div class="img-content">
+                            <h4>UMTLOGİSTİC WEBSİTE</h4>
+                            <h5></h5>
+                        </div>
+                    </div>
+                </div>
+                <!-- 7. ikili -->
 
 
             </div>
@@ -193,7 +249,7 @@
         <div class="container">
             <div class="row gy-5 justify-content-between justify-content-lg-start">
                 <div class="col-lg-7 col-md-4 text-center text-md-start">
-                       <a href="index.html"><img src="assets/img/logo.png"></a>
+                    <a href="index.html"><img src="assets/img/logo.png"></a>
                     <h5>Yoldaki Dijital dünyaya <br class="d-none d-lg-block"> açılan ortağınız</h5>
                     <h5 class="mail">info@realwebtasarim.com</h5>
                     <div class="social-medias justify-content-center justify-content-md-start">
