--- a/referans-detaylar/aksoy-maritime.html
+++ b/referans-detaylar/aksoy-maritime.html
@@ -95,11 +95,11 @@
                     </div>
                 </div>
                 <div class="d-flex justify-content-center">
-                    <a href="" class="prev-btn">
+                    <a href="wayson-lighting.html" class="prev-btn">
                         <div class="btn-item"><i class="fa-solid fa-angle-left"></i></div>
                         <p class="text-item">Önceki İş</p>
                     </a>
-                    <a href="" class="next-btn">
+                    <a href="garden-life-exclusive.html" class="next-btn">
                         <div class="btn-item"><i class="fa-solid fa-angle-right"></i></div>
                         <p class="text-item">Sonraki İş</p>
                     </a>
