--- a/referans-detay.html
+++ b/referans-detay.html
@@ -42,22 +42,19 @@
                     <ol class="navbar flex-column flex-lg-row d-lg-flex d-block">
                         <li><a href="index.html">ANASAYFA</a></li>
                         <li><a href="hakkimizda.html">hakkımızda</a></li>
-                        <li><a href="hizmetler.html">HİZMETLERİMİZ</a></li>
-                        <!-- <li class="dropdown">
-                            <a href="JavaScript:Void(0)">Bütün Sayfalar</a>
+                        <li class="dropdown">
+                            <a href="JavaScript:Void(0)">Hizmetler</a>
                             <ul class="dropdown-content">
                                 <li><a href="hizmetler.html">Hizmetler</a></li>
-                                <li><a href="hizmet-detay.html">Hizmet Detay</a></li>
-                                <li><a href="referanslar.html">Referanslar</a></li>
-                                <li><a href="referans-detay.html">Referenslar Detay</a></li>
-                                <li><a href="index.html">Anasayfa</a></li>
-                                <li><a href="iletisim.html">İletişim</a></li>
-                                <li><a href="blog.html">Blog</a></li>
-                                <li><a href="hakkimizda.html">Hakkımızda</a></li>
-                                <li><a href="blog-detay.html">Blog Detay</a></li>
-
+                                <li><a href="hizmet-detaylar/web-tasarim.html">Web Tasarım</a></li>
+                                <li><a href="hizmet-detaylar/web-yazilim.html">Web Yazılım</a></li>
+                                <li><a href="hizmet-detaylar/kurumsal-seo.html">Kurumsal SEO</a></li>
+                                <li><a href="hizmet-detaylar/e-ticaret.html">E-Ticaret</a></li>
+                                <li><a href="hizmet-detaylar/google-adwords.html">Google Adwords</a></li>
+                                <li><a href="hizmet-detaylar/sosyal-media-danismanligi.html">Sosyal Medya Danışmanlığı</a></li>
+                           
                             </ul>
-                        </li> -->
+                        </li>
                         <li><a class="active" href="referanslar.html">Referanslar</a></li>
                         <li><a href="blog.html">Blog</a></li>
                         <li><a href="iletisim.html">İLETİŞİM</a></li>
