--- a/hizmet-detaylar/e-ticaret.html
+++ b/hizmet-detaylar/e-ticaret.html
@@ -9,21 +9,21 @@
 
 
     <!-- Vendor  Css files -->
-    <link re l="stylesheet" href="assets/vendor/aos/aos.css">
-    <link rel="stylesheet" href="assets/vendor/bootstrap-5.1.3/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/vendor/bootstrap-icons/bootstrap-icons.css">
-    <link rel="stylesheet" href="assets/vendor/glightbox/css/glightbox.css">
-    <link rel="stylesheet" href="assets/vendor/swipperjs/swiper-bundle.min.css">
-    <link rel="stylesheet" href="assets/vendor/boxicons/css/boxicons.min.css">
+    <link re l="stylesheet" href="../assets/vendor/aos/aos.css">
+    <link rel="stylesheet" href="../assets/vendor/bootstrap-5.1.3/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../assets/vendor/bootstrap-icons/bootstrap-icons.css">
+    <link rel="stylesheet" href="../assets/vendor/glightbox/css/glightbox.css">
+    <link rel="stylesheet" href="../assets/vendor/swipperjs/swiper-bundle.min.css">
+    <link rel="stylesheet" href="../assets/vendor/boxicons/css/boxicons.min.css">
 
     <!-- Font Awesome Tanımlaması -->
-    <link rel="stylesheet" href="assets/vendor/font-awesome/css/fontawesome.min.css">
-    <link rel="stylesheet" href="assets/vendor/font-awesome/css/solid.min.css">
-    <link rel="stylesheet" href="assets/vendor/font-awesome/css/regular.min.css">
-    <link rel="stylesheet" href="assets/vendor/font-awesome/css/brands.min.css">
+    <link rel="stylesheet" href="../assets/vendor/font-awesome/css/fontawesome.min.css">
+    <link rel="stylesheet" href="../assets/vendor/font-awesome/css/solid.min.css">
+    <link rel="stylesheet" href="../assets/vendor/font-awesome/css/regular.min.css">
+    <link rel="stylesheet" href="../assets/vendor/font-awesome/css/brands.min.css">
 
     <!-- Main Css Files -->
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="../assets/css/style.css">
 
 
 </head>
@@ -35,38 +35,38 @@
         <div
             class="p-lg-0 px-5 container-fluid justify-content-xl-between justify-content-between justify-content-lg-around d-flex align-items-center flex-wrap flex-lg-nowrap">
             <div class="logo order-0 ">
-                <a href="index.html"> <img src="assets/img/logo.png" alt="gerçek web tasarım"></a>
+                <a href="../index.html"> <img src="../assets/img/logo.png" alt="gerçek web tasarım"></a>
             </div>
             <div class="d-block d-lg-flex align-items-center navbar-container order-3 ">
                 <nav class="d-block d-lg-flex d-lg-flex pt-4 pt-lg-0">
                     <ol class="navbar flex-column flex-lg-row d-lg-flex d-block">
-                        <li><a href="index.html">ANASAYFA</a></li>
-                        <li><a href="hakkimizda.html">hakkımızda</a></li>
+                        <li><a href="../index.html">ANASAYFA</a></li>
+                        <li><a href="../hakkimizda.html">hakkımızda</a></li>
                         <li class="dropdown">
-                            <a class="active" href="JavaScript:Void(0)">Hizmetler</a>
+                            <a class="active" href="../JavaScript:Void(0)">Hizmetler</a>
                             <ul class="dropdown-content">
-                                <li><a href="hizmetler.html">Hizmetler</a></li>
-                                <li><a href="hizmet-detaylar/web-tasarim.html">Web Tasarım</a></li>
-                                <li><a href="hizmet-detaylar/web-yazilim.html">Web Yazılım</a></li>
-                                <li><a href="hizmet-detaylar/kurumsal-seo.html">Kurumsal SEO</a></li>
-                                <li><a href="hizmet-detaylar/e-ticaret.html">E-Ticaret</a></li>
-                                <li><a href="hizmet-detaylar/google-adwords.html">Google Adwords</a></li>
-                                <li><a href="hizmet-detaylar/sosyal-media-danismanligi.html">Sosyal Medya Danışmanlığı</a></li>
-                           
+                                <li><a href="../hizmetler.html">Hizmetler</a></li>
+                                <li><a href="web-tasarim.html">Web Tasarım</a></li>
+                                <li><a href="web-yazilim.htm">Web Yazılım</a></li>
+                                <li><a href="kurumsal-seo.html">Kurumsal SEO</a></li>
+                                <li><a href="e-ticaret.html">E-Ticaret</a></li>
+                                <li><a href="google-adwords.html">Google Adwords</a></li>
+                                <li><a href="sosyal-media-danismanligi.html">Sosyal Medya Danışmanlığı</a></li>
+
                             </ul>
                         </li>
-                        <li><a href="referanslar.html">Referanslar</a></li>
-                        <li><a href="blog.html">Blog</a></li>
-                        <li><a href="iletisim.html">İLETİŞİM</a></li>
+                        <li><a href="../referanslar.html">Referanslar</a></li>
+                        <li><a href="../blog.html">Blog</a></li>
+                        <li><a href="../iletisim.html">İLETİŞİM</a></li>
                     </ol>
                 </nav>
             </div>
             <div class="order-1 order-lg-3 ms-auto ms-lg-0 d-flex align-items-center search">
                 <i class='bx bx-search'></i>
-                <input type="text" placeholder="ARA">
+                <input type="text" placeholder="../aRA">
             </div>
             <i class="bi bi-list navbar-toggle d-block d-lg-none order-2 "></i>
-            <a class="btn-teklif d-none d-xl-block order-5" href="index.html#teklif">TEKLİF AL</a>
+            <a class="btn-teklif d-none d-xl-block order-5" href="../index.html#teklif">TEKLİF AL</a>
 
     </header>
     <!-- Header Side END -->
@@ -79,18 +79,20 @@
                 <div class="col-xl-6 text-center text-md-start">
                     <div class="content">
                         <div class="services-container">
-                            <h4>LOGO <br class="d-none d-lg-block"> TASARIMI</h4>
+                            <h4>E-Ticaret</h4>
 
                             <h5>Kullanılan Araçlar</h5>
                             <p>Photoshop, Illustration, Adobe XD</p>
 
                             <h5>Hedef</h5>
-                            <p>Markanızı daha üst bir boyuta taşımak için, bir logo tasarımına ihtiyacınız bulunmaktadır. Böylelikle bilinirliğiniz ile piyasadaki yerinizi alabilirsiniz.</p>
+                            <p>Markanızı daha üst bir boyuta taşımak için, bir logo tasarımına ihtiyacınız
+                                bulunmaktadır. Böylelikle bilinirliğiniz ile piyasadaki yerinizi alabilirsiniz.</p>
                             <h5>Neden Bir Logoya Sahip Olmalıyım?</h5>
                             <p>
-                                Markanızı daha üst bir boyuta taşımak için, bir logo tasarımına ihtiyacınız bulunmaktadır. Böylelikle bilinirliğiniz ile piyasadaki yerinizi alabilirsiniz.
+                                Markanızı daha üst bir boyuta taşımak için, bir logo tasarımına ihtiyacınız
+                                bulunmaktadır. Böylelikle bilinirliğiniz ile piyasadaki yerinizi alabilirsiniz.
                             </p>
-                            <a class="btn-teklif" href="#">TEKLİF AL</a>
+                            <a class="btn-teklif" href="../#">TEKLİF AL</a>
                         </div>
 
                     </div>
@@ -100,12 +102,14 @@
                         <div class="swiper-wrapper">
                             <div class="swiper-slide">
                                 <div class="image-container">
-                                    <img class="img-fluid" src="assets/img/servis-detay/services-slider/slider-1.png">
+                                    <img class="img-fluid"
+                                        src="../assets/img/servis-detay/services-slider/slider-1.png">
                                 </div>
                             </div>
                             <div class="swiper-slide">
                                 <div class="image-container">
-                                    <img class="img-fluid" src="assets/img/servis-detay/services-slider/slider-1.png">
+                                    <img class="img-fluid"
+                                        src="../assets/img/servis-detay/services-slider/slider-1.png">
                                 </div>
                             </div>
                         </div>
@@ -121,7 +125,8 @@
                 <!-- 1. ikili  START-->
                 <div page="1" class="col-lg-6 col-12 limitPage">
                     <div class="img-body">
-                        <a href="referans-detay.html"> <img src="assets/img/referanslar/references-1.png" class="img-fluid"></a>
+                        <a href="../referans-detay.html"> <img src="../assets/img/referanslar/references-1.png"
+                                class="img-fluid"></a>
                         <div class="img-content">
                             <h4>Koç Holding</h4>
                             <h5>MAKİNE YÖNETİMİ SİTESİ</h5>
@@ -130,7 +135,8 @@
                 </div>
                 <div page="1" class="col-lg-6 col-12 limitPage">
                     <div class="img-body">
-                        <a href="referans-detay.html"> <img src="assets/img/referanslar/references-2.png" class="img-fluid"></a>
+                        <a href="../referans-detay.html"> <img src="../assets/img/referanslar/references-2.png"
+                                class="img-fluid"></a>
                         <div class="img-content">
                             <h4>Koç Holding</h4>
                             <h5>MAKİNE YÖNETİMİ SİTESİ</h5>
@@ -142,7 +148,8 @@
                 <!-- 2. ikili START -->
                 <div page="2" class="col-lg-6 col-12 limitPage">
                     <div class="img-body">
-                        <a href="referans-detay.html"> <img src="assets/img/referanslar/references-1.png" class="img-fluid"></a>
+                        <a href="../referans-detay.html"> <img src="../assets/img/referanslar/references-1.png"
+                                class="img-fluid"></a>
                         <div class="img-content">
                             <h4>Koç Holding</h4>
                             <h5>MAKİNE YÖNETİMİ SİTESİ</h5>
@@ -151,7 +158,8 @@
                 </div>
                 <div page="2" class="col-lg-6 col-12 limitPage">
                     <div class="img-body">
-                        <a href="referans-detay.html"> <img src="assets/img/referanslar/references-2.png" class="img-fluid"></a>
+                        <a href="../referans-detay.html"> <img src="../assets/img/referanslar/references-2.png"
+                                class="img-fluid"></a>
                         <div class="img-content">
                             <h4>Koç Holding</h4>
                             <h5>MAKİNE YÖNETİMİ SİTESİ</h5>
@@ -164,7 +172,8 @@
                 <!-- 3. ikili START -->
                 <div page="3" class="col-lg-6 col-12 limitPage">
                     <div class="img-body">
-                        <a href="referans-detay.html"> <img src="assets/img/referanslar/references-1.png" class="img-fluid"></a>
+                        <a href="../referans-detay.html"> <img src="../assets/img/referanslar/references-1.png"
+                                class="img-fluid"></a>
                         <div class="img-content">
                             <h4>Koç Holding</h4>
                             <h5>MAKİNE YÖNETİMİ SİTESİ</h5>
@@ -173,7 +182,8 @@
                 </div>
                 <div page="3" class="col-lg-6 col-12 limitPage">
                     <div class="img-body">
-                        <a href="referans-detay.html"> <img src="assets/img/referanslar/references-2.png" class="img-fluid"></a>
+                        <a href="../referans-detay.html"> <img src="../assets/img/referanslar/references-2.png"
+                                class="img-fluid"></a>
                         <div class="img-content">
                             <h4>Koç Holding</h4>
                             <h5>MAKİNE YÖNETİMİ SİTESİ</h5>
@@ -185,7 +195,8 @@
             </div>
 
             <div class="text-center mt-4">
-                <a id="moreShowHizmetDetay" class="all-btn" href="#">DAHA FAZLA GÖRÜNTÜLE <i class="fa-solid fa-angle-right"></i></a>
+                <a id="moreShowHizmetDetay" class="../all-btn" href="../#">DAHA FAZLA GÖRÜNTÜLE <i
+                        class="fa-solid fa-angle-right"></i></a>
             </div>
         </div>
     </section>
@@ -196,29 +207,29 @@
         <div class="container">
             <div class="row gy-5 justify-content-between justify-content-lg-start">
                 <div class="col-lg-7 col-md-4 text-center text-md-start">
-                       <a href="index.html"><img src="assets/img/logo.png"></a>
+                    <a href="../index.html"><img src="../assets/img/logo.png"></a>
                     <h5>Yoldaki Dijital dünyaya <br class="d-none d-lg-block"> açılan ortağınız</h5>
                     <h5 class="mail">info@realwebtasarim.com</h5>
                     <div class="social-medias justify-content-center justify-content-md-start">
-                        <a href=""><i class="fa-brands fa-instagram"></i></a>
-                        <a href=""><i class="fa-brands fa-facebook-f"></i></a>
-                        <a href=""><i class="fa-brands fa-twitter"></i></a>
+                        <a href="../"><i class="fa-brands fa-instagram"></i></a>
+                        <a href="../"><i class="fa-brands fa-facebook-f"></i></a>
+                        <a href="../"><i class="fa-brands fa-twitter"></i></a>
                     </div>
                 </div>
                 <div class="col-lg-3 col-sm-4 text-center text-lg-start">
                     <h5 class="link-title">Şirket</h5>
                     <ol class="d-flex flex-column">
                         <li>
-                            <a href=""> Hakkımzıda</a>
+                            <a href="../"> Hakkımzıda</a>
                         </li>
                         <li>
-                            <a href=""> Neler Yapıyoruz?</a>
+                            <a href="../"> Neler Yapıyoruz?</a>
                         </li>
                         <li>
-                            <a href=""> Teklif Al</a>
+                            <a href="../"> Teklif Al</a>
                         </li>
                         <li>
-                            <a href=""> İletişim</a>
+                            <a href="../"> İletişim</a>
                         </li>
                     </ol>
                 </div>
@@ -226,22 +237,22 @@
                     <h5 class="link-title">Kurumsal</h5>
                     <ol class="d-flex flex-column">
                         <li>
-                            <a href=""> Blog</a>
+                            <a href="../"> Blog</a>
                         </li>
                         <li>
-                            <a href=""> Referanslar</a>
+                            <a href="../"> Referanslar</a>
                         </li>
                         <li>
-                            <a href=""> Hizmetlerimiz</a>
+                            <a href="../"> Hizmetlerimiz</a>
                         </li>
                         <li>
-                            <a href=""> Destek</a>
+                            <a href="../"> Destek</a>
                         </li>
                     </ol>
                 </div>
             </div>
         </div>
-        <div class="author">
+        <div class="../author">
             <p>© 2022 Tüm Hakları Saklıdır</p>
         </div>
     </footer>
@@ -257,17 +268,17 @@
 
 
     <!-- Vendor Js Files File-->
-    <script src="assets/vendor/jquerry/jquery-3.6.0.min.js"></script>
-    <script src="assets/vendor/aos/aos.js"></script>
-    <script src="assets/vendor/bootstrap-5.1.3/js/bootstrap.min.js"></script>
-    <script src="assets/vendor/glightbox/js/glightbox.js"></script>
-    <script src="assets/vendor/isotope-layout/isotope.pkgd.js"></script>
-    <script src="assets/vendor/php-email-form/validate.js"></script>
-    <script src="assets/vendor/swipperjs/swiper-bundle.min.js"></script>
-    <script src="assets/vendor/waypoint/jquery.waypoints.js"></script>
+    <script src="../assets/vendor/jquerry/jquery-3.6.0.min.js"></script>
+    <script src="../assets/vendor/aos/aos.js"></script>
+    <script src="../assets/vendor/bootstrap-5.1.3/js/bootstrap.min.js"></script>
+    <script src="../assets/vendor/glightbox/js/glightbox.js"></script>
+    <script src="../assets/vendor/isotope-layout/isotope.pkgd.js"></script>
+    <script src="../assets/vendor/php-email-form/validate.js"></script>
+    <script src="../assets/vendor/swipperjs/swiper-bundle.min.js"></script>
+    <script src="../assets/vendor/waypoint/jquery.waypoints.js"></script>
 
     <!-- Main Js Source File -->
-    <script src="assets/js/main.js"></script>
+    <script src="../assets/js/main.js"></script>
 
 </body>
 
