--- a/hizmetler.html
+++ b/hizmetler.html
@@ -42,22 +42,20 @@
                     <ol class="navbar flex-column flex-lg-row d-lg-flex d-block">
                         <li><a href="index.html">ANASAYFA</a></li>
                         <li><a href="hakkimizda.html">hakkımızda</a></li>
-                        <li><a class="active" href="hizmetler.html">HİZMETLERİMİZ</a></li>
-                        <!-- <li class="dropdown">
-                            <a href="JavaScript:Void(0)">Bütün Sayfalar</a>
+                        <li class="dropdown">
+                            <a class="active" href="JavaScript:Void(0)">Hizmetler</a>
                             <ul class="dropdown-content">
                                 <li><a href="hizmetler.html">Hizmetler</a></li>
-                                <li><a href="hizmet-detay.html">Hizmet Detay</a></li>
-                                <li><a href="referanslar.html">Referanslar</a></li>
-                                <li><a href="referans-detay.html">Referenslar Detay</a></li>
-                                <li><a href="index.html">Anasayfa</a></li>
-                                <li><a href="iletisim.html">İletişim</a></li>
-                                <li><a href="blog.html">Blog</a></li>
-                                <li><a href="hakkimizda.html">Hakkımızda</a></li>
-                                <li><a href="blog-detay.html">Blog Detay</a></li>
+                                <li><a href="hizmet-detaylar/web-tasarim.html">Web Tasarım</a></li>
+                                <li><a href="hizmet-detaylar/web-yazilim.html">Web Yazılım</a></li>
+                                <li><a href="hizmet-detaylar/kurumsal-seo.html">Kurumsal SEO</a></li>
+                                <li><a href="hizmet-detaylar/e-ticaret.html">E-Ticaret</a></li>
+                                <li><a href="hizmet-detaylar/google-adwords.html">Google Adwords</a></li>
+                                <li><a href="hizmet-detaylar/sosyal-media-danismanligi.html">Sosyal Medya
+                                        Danışmanlığı</a></li>
 
                             </ul>
-                        </li> -->
+                        </li>
                         <li><a href="referanslar.html">Referanslar</a></li>
                         <li><a href="blog.html">Blog</a></li>
                         <li><a href="iletisim.html">İLETİŞİM</a></li>
@@ -181,7 +179,7 @@
         <div class="container">
             <div class="row gy-5 justify-content-between justify-content-lg-start">
                 <div class="col-lg-7 col-md-4 text-center text-md-start">
-                       <a href="index.html"><img src="assets/img/logo.png"></a>
+                    <a href="index.html"><img src="assets/img/logo.png"></a>
                     <h5>Yoldaki Dijital dünyaya <br class="d-none d-lg-block"> açılan ortağınız</h5>
                     <h5 class="mail">info@realwebtasarim.com</h5>
                     <div class="social-medias justify-content-center justify-content-md-start">
