--- a/referans-detaylar/orusan-kimya.html
+++ b/referans-detaylar/orusan-kimya.html
@@ -32,34 +32,33 @@
 
     <!-- =========== Header Side =========== -->
     <header id="header">
-        <div class="p-lg-0 px-5 container-fluid justify-content-xl-between justify-content-between justify-content-lg-around d-flex align-items-center flex-wrap flex-lg-nowrap">
+        <div
+            class="p-lg-0 px-5 container-fluid justify-content-xl-between justify-content-between justify-content-lg-around d-flex align-items-center flex-wrap flex-lg-nowrap">
             <div class="logo order-0 ">
-                <a href="../index.html"> <img src="../assets/img/logo.png" alt="gerçek web tasarım"></a>
+                <a href="index.html"> <img src="assets/img/logo.png" alt="gerçek web tasarım"></a>
             </div>
             <div class="d-block d-lg-flex align-items-center navbar-container order-3 ">
                 <nav class="d-block d-lg-flex d-lg-flex pt-4 pt-lg-0">
                     <ol class="navbar flex-column flex-lg-row d-lg-flex d-block">
-                        <li><a href="../index.html">ANASAYFA</a></li>
-                        <li><a href="../hakkimizda.html">hakkımızda</a></li>
-                        <li><a href="../hizmetler.html">HİZMETLERİMİZ</a></li>
-                        <!-- <li class="dropdown">
-                            <a href="JavaScript:Void(0)">Bütün Sayfalar</a>
+                        <li><a class="active" href="index.html">ANASAYFA</a></li>
+                        <li><a href="hakkimizda.html">hakkımızda</a></li>
+                        <li class="dropdown">
+                            <a href="JavaScript:Void(0)">Hizmetler</a>
                             <ul class="dropdown-content">
-                                <li><a href="hizmetler.html">Hizmetler</a></li>
-                                <li><a href="hizmet-detay.html">Hizmet Detay</a></li>
-                                <li><a href="referanslar.html">Referanslar</a></li>
-                                <li><a href="referans-detay.html">Referenslar Detay</a></li>
-                                <li><a href="index.html">Anasayfa</a></li>
-                                <li><a href="iletisim.html">İletişim</a></li>
-                                <li><a href="blog.html">Blog</a></li>
-                                <li><a href="hakkimizda.html">Hakkımızda</a></li>
-                                <li><a href="blog-detay.html">Blog Detay</a></li>
+                                <li><a href="../hizmetler.html">Hizmetler</a></li>
+                                <li><a href="../hizmet-detaylar/web-tasarim.html">Web Tasarım</a></li>
+                                <li><a href="../hizmet-detaylar/web-yazilim.html">Web Yazılım</a></li>
+                                <li><a href="../hizmet-detaylar/kurumsal-seo.html">Kurumsal SEO</a></li>
+                                <li><a href="../hizmet-detaylar/e-ticaret.html">E-Ticaret</a></li>
+                                <li><a href="../hizmet-detaylar/google-adwords.html">Google Adwords</a></li>
+                                <li><a href="../hizmet-detaylar/sosyal-media-danismanligi.html">Sosyal Medya
+                                        Danışmanlığı</a></li>
 
                             </ul>
-                        </li> -->
-                        <li><a class="active" href="../referanslar.html">Referanslar</a></li>
-                        <li><a href="../blog.html">Blog</a></li>
-                        <li><a href="../iletisim.html">İLETİŞİM</a></li>
+                        </li>
+                        <li><a href="referanslar.html">Referanslar</a></li>
+                        <li><a href="blog.html">Blog</a></li>
+                        <li><a href="iletisim.html">İLETİŞİM</a></li>
                     </ol>
                 </nav>
             </div>
